@@ -1,5 +1,5 @@
 class Admin::ExportController < ApplicationController
-  def yaml
-    render :text => Radiant::Exporter.export, :content_type => "text/yaml"
+  def export
+    render :text => Radiant::Exporter.export(params[:type] || 'yaml'), :content_type => "text/yaml"
   end
 end
